--- a/Sopt_Seminar/Sopt_Seminar/Info.plist
+++ b/Sopt_Seminar/Sopt_Seminar/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>API_Key</key>
+	<string>$(API_Key)</string>
 	<key>BASE_URL</key>
 	<string>$(BASE_URL)</string>
 	<key>NSAppTransportSecurity</key>
@@ -26,5 +28,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>Weather_URL</key>
+	<string>$(Weather_URL)</string>
 </dict>
 </plist>
