--- a/Sopt_Seminar/Sopt_Seminar/Info.plist
+++ b/Sopt_Seminar/Sopt_Seminar/Info.plist
@@ -15,6 +15,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>Poster_URL</key>
+	<string>$(Poster_URL)</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
